# dlt-calc

./: .gitignore  pyproject.toml
notebook/4_RG_Flow_of_Preactivations/: 4.1_First_Layer.ipynb
notebook/ch01_Pretraining/: 01_Gaussian_Integrals.ipynb  02_Probability_Correlation_and_Statistics_and_All_That.ipynb  03_Nearly_Gaussian_Distributions.ipynb
notebook/ch04_RG_Flow_of_Preactivations/: 01_First_Layer.ipynb  02_Second_Layer.ipynb
src/symdl/: __init__.py
src/symdl/assumption/: __init__.py  mixin.py
src/symdl/gaussian/: __init__.py  expectation.py  indexed.py  wick.py
src/symdl/nn/: __init__.py  indexed.py  layer.py  utils.py
src/symdl/random/: __init__.py  correlator.py  expectation.py
src/symdl/tensor/: __init__.py  canonical.py  indexed.py  symmetry.py
src/symdl/utils/: __init__.py  sum.py
src/symlib/MLP/: __init__.py  layer.py
src/symlib/gaussian/: __init__.py  wick.py
src/symlib/nn/: __init__.py  layer.py  utils.py
src/symlib/random/: __init__.py  base.py  correlator.py  expectation.py  gaussian_base.py  wick.py
src/symlib/tensor/: __init__.py  base.py  canonical.py  symmetry.py
src/symlib/utils/: __init__.py  sum.py  sum_util.py  wild_util.py
